@@ -1,5 +1,5 @@
 /*****************************************************************************
- *  $Id: encode.c,v 1.12 2004/05/01 05:08:26 dun Exp $
+ *  $Id: encode.c,v 1.13 2004/05/06 01:41:12 dun Exp $
  *****************************************************************************
  *  This file is part of the Munge Uid 'N' Gid Emporium (MUNGE).
  *  For details, see <http://www.llnl.gov/linux/munge/>.
@@ -148,7 +148,6 @@ encode_req_v1 (munge_msg_t m, munge_ctx_t ctx, const void *buf, int len)
     struct munge_msg_v1 *m1;
 
     assert (m != NULL);
-    assert (m->head.version == 1);
     assert (m->pbody == NULL);
 
     m->head.type = MUNGE_MSG_ENC_REQ;
@@ -220,7 +219,6 @@ encode_rsp_v1 (munge_msg_t m, char **cred)
     int                  n;
 
     assert (m != NULL);
-    assert (m->head.version == 1);
     assert (cred != NULL);
 
     m1 = (struct munge_msg_v1 *) m->pbody;
