@@ -1,5 +1,5 @@
 /*****************************************************************************
- *  $Id: enc_v1.c,v 1.17 2004/05/01 05:08:26 dun Exp $
+ *  $Id: enc_v1.c,v 1.18 2004/05/06 01:41:12 dun Exp $
  *****************************************************************************
  *  This file is part of the Munge Uid 'N' Gid Emporium (MUNGE).
  *  For details, see <http://www.llnl.gov/linux/munge/>.
@@ -139,7 +139,6 @@ enc_v1_validate_msg (munge_msg_t m)
     struct munge_msg_v1 *m1;            /* munge msg (v1 format)             */
 
     assert (m != NULL);
-    assert (m->head.version == 1);
     assert (m->head.type == MUNGE_MSG_ENC_REQ);
 
     m1 = m->pbody;
@@ -251,7 +250,6 @@ enc_v1_authenticate (munge_cred_t c)
 
     assert (c != NULL);
     assert (c->msg);
-    assert (c->msg->head.version == 1);
 
     m1 = c->msg->pbody;
     p_uid = (uid_t *) &(m1->client_uid);
@@ -277,7 +275,6 @@ enc_v1_timestamp (munge_cred_t c)
 
     assert (c != NULL);
     assert (c->msg != NULL);
-    assert (c->msg->head.version == 1);
 
     m1 = c->msg->pbody;
 
@@ -309,7 +306,6 @@ enc_v1_pack_outer (munge_cred_t c)
     assert (c != NULL);
     assert (c->outer_mem == NULL);
     assert (c->msg != NULL);
-    assert (c->msg->head.version == 1);
 
     m1 = c->msg->pbody;
 
@@ -377,7 +373,6 @@ enc_v1_pack_inner (munge_cred_t c)
     assert (c != NULL);
     assert (c->inner_mem == NULL);
     assert (c->msg != NULL);
-    assert (c->msg->head.version == 1);
 
     m1 = c->msg->pbody;
 
@@ -475,7 +470,6 @@ enc_v1_precompress (munge_cred_t c)
 
     assert (c != NULL);
     assert (c->msg != NULL);
-    assert (c->msg->head.version == 1);
 
     m1 = c->msg->pbody;
 
@@ -542,7 +536,6 @@ enc_v1_mac (munge_cred_t c)
 
     assert (c != NULL);
     assert (c->msg != NULL);
-    assert (c->msg->head.version == 1);
 
     m1 = c->msg->pbody;
 
@@ -596,7 +589,6 @@ enc_v1_compress (munge_cred_t c)
 
     assert (c != NULL);
     assert (c->msg != NULL);
-    assert (c->msg->head.version == 1);
 
     m1 = c->msg->pbody;
 
@@ -643,7 +635,6 @@ enc_v1_encrypt (munge_cred_t c)
 
     assert (c != NULL);
     assert (c->msg != NULL);
-    assert (c->msg->head.version == 1);
 
     m1 = c->msg->pbody;
 
@@ -741,7 +732,6 @@ enc_v1_armor (munge_cred_t c)
 
     assert (c != NULL);
     assert (c->msg != NULL);
-    assert (c->msg->head.version == 1);
 
     m1 = c->msg->pbody;
 
@@ -842,7 +832,6 @@ enc_v1_fini (munge_cred_t c)
 
     assert (c != NULL);
     assert (c->msg != NULL);
-    assert (c->msg->head.version == 1);
 
     m1 = c->msg->pbody;
 
