@@ -1,3 +1,12 @@
+2004-05-05  Chris Dunlap  <cdunlap@llnl.gov>
+
+	* src/libcommon/munge_defs.h, src/libcommon/munge_msg.c,
+	  src/libcommon/munge_msg.h, src/libmunge/decode.c,
+	  src/libmunge/encode.c, src/munged/cred.h, src/munged/dec_v1.c,
+	  src/munged/enc_v1.c, src/munged/msg_server.c:
+	  Incremented MUNGE_MSG_VERSION.  Fixed segfault occurring when
+          received message was smaller than its expected length {gnats:432}.
+
 2004-04-30  Chris Dunlap  <cdunlap@llnl.gov>
 
 	* : Released 0.3.
